[gd_scene load_steps=3 format=3 uid="uid://bde72483yp21x"]

[ext_resource type="Script" path="res://gameplayReferences/attack.gd" id="1_tti0k"]

[sub_resource type="CircleShape2D" id="CircleShape2D_vs7kr"]

[node name="Attack" type="Node2D"]
script = ExtResource("1_tti0k")

[node name="AttackRaycast" type="RayCast2D" parent="."]

[node name="attackRadius" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 6

[node name="CollisionShape2D" type="CollisionShape2D" parent="attackRadius"]
shape = SubResource("CircleShape2D_vs7kr")

[connection signal="body_entered" from="attackRadius" to="." method="_checkAttackRange"]
[connection signal="body_exited" from="attackRadius" to="." method="_checkAttackRange"]
